--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,21 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MyBlog</title>
+    <link href="/style.css" rel="stylesheet">
+    <title>Antidale</title>
 </head>
 
 <body>
+    <header>
+        <div class="flex-container">
+            <img src="{{ get_url(path='/images/orangemus.png')}}" />
+            <h1>Antidale.com</h1>
+            <div>
+                <a href="{{ get_url(path='@/blog/_index.md') }}" class="item-end">Posts</a>
+            </div>
+        </div>
+
+    </header>
     <section class="section">
         <div class="container">
             {% block content %} {% endblock %}
