maybe fix image pathing

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="flex-container">
-            <img src="{{ get_url(path='/images/orangemus.png')}}" />
+            <img src="{{ get_url(path='images/orangemus.png') }}" />
             <h1>Antidale.com</h1>
             <div>
                 <a href="{{ get_url(path='@/blog/_index.md') }}" class="item-end">Posts</a>
