--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="style.css" rel="stylesheet">
+    <link href="{{ get_url(path='css/style.css', trailing_slash=false) | safe }}" rel="stylesheet">
     <title>Antidale</title>
 </head>
 
 <body>
     <header>
         <div class="flex-container">
-            <img src="{{ get_url(path='images/orangemus.png') }}" />
+            <img src="{{ get_url(path='images/orangemus.png', trailing_slash=false) | safe }}" />
             <h1>Antidale.com</h1>
-            <div>
-                <a href="{{ get_url(path='@/blog/_index.md') }}" class="item-end">Posts</a>
+            <div class="item-end">
+                <a href="/">Home</a>
+                <a href="{{ get_url(path='@/blog/_index.md') }}">Posts</a>
             </div>
         </div>
 
