--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 <h1 class="title">
-    Cook. Code. Clean.
+    Howdy
 </h1>
+<p>
+    I'm Antidale. I'm a software developer by trade, someone who enjoys cooking, and someone who's learning to be better
+    about cooking. I have a cat, and I volunteer at a no-kill cat shelter in Portland, OR.
+</p>
+<p>
+    This site is a project I'm working on slowly. Right now, here in the tail end of 2024, I'm working at building out
+    the blog portion, and evolving the look and feel of the site. Expect things to change with some frequency, and to
+    look kinda bad as I slowly work through more learning of css, and maybe learn something about design. I know I
+    expect more of the former, and less of the latter.
+</p>
 {% endblock content %}
