add bsky and github links

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,12 @@
                 <a href="/">Home</a>
             </li>
             <li>
+                <a href="https://bsky.app/profile/antidale.com">bsky</a>
+            </li>
+            <li>
+                <a href="https://github.com/Antidale">github</a>
+            </li>
+            <li>
                 <a href="{{ get_url(path='@/blog/_index.md') }}">Posts</a>
             </li>
         </ul>
