add configuration for atom feed

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <link href="{{ get_url(path='css/style.css', trailing_slash=false) | safe }}" rel="stylesheet">
     <title>Antidale</title>
+    {% block rss %}
+    <link rel="alternate" type="application/atom+xml" title="RSS" href="{{ get_url(path=" atom.xml",
+        trailing_slash=false) }}">
+    {% endblock %}
 </head>
 
 <body class="container">
