replace " with ', remove extra space in head feed config

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link href="{{ get_url(path='css/style.css', trailing_slash=false) | safe }}" rel="stylesheet">
     <title>Antidale</title>
     {% block rss %}
-    <link rel="alternate" type="application/atom+xml" title="RSS" href="{{ get_url(path=" atom.xml",
+    <link rel="alternate" type="application/atom+xml" title="RSS" href="{{ get_url(path='atom.xml',
         trailing_slash=false) }}">
     {% endblock %}
 </head>
