--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
             <li>
                 <a href="{{ get_url(path='@/blog/_index.md') }}">Posts</a>
             </li>
+            <li>
+                <a href="/tags">Tags</a>
+            </li>
         </ul>
     </section>
 </body>
