--- a/templates/base.html
+++ b/templates/base.html
@@ -25,25 +25,22 @@
                 <a href="/">Home</a>
             </li>
             <li>
-                <a href="https://bsky.app/profile/antidale.com">bsky</a>
-            </li>
-            <li>
-                <a href="https://github.com/Antidale">github</a>
-            </li>
-            <li>
                 <a href="{{ get_url(path='@/blog/_index.md') }}">Posts</a>
             </li>
             <li>
                 <a href="/tags">Tags</a>
             </li>
+            <li>
+                <a href="https://bsky.app/profile/antidale.com">bsky</a>
+            </li>
+            <li>
+                <a href="https://github.com/Antidale">github</a>
+            </li>
         </ul>
     </section>
 </body>
 <footer class="footer">
-    Site built with <a href="https://www.getzola.org/documentation/content/overview/">Zola</a>.
-    <p>
-        &copy; 2024 by me.
-    </p>
+    Site built with <a href="https://www.getzola.org/documentation/content/overview/">Zola</a>. &copy;2025 by me.
 </footer>
 
 </html>
