--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,11 @@
   padding: 1em;
 }
 
-code>span {
-  padding-left: 1rem;
+pre {
+  padding: .5rem 1rem;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
