--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,34 @@
+html {
+  --background: #ffffff;
+  --background-alt: #fff6e6;
+  --primary: #294C60;
+  --primary-contrast: #ffffff;
+  --accent: #fca05d;
+  --color: #001b2e;
+  --danger: #c52b2b;
+  --shadow: #b8cfdd;
+  --border: #afbac0;
+
+  @media (prefers-color-scheme: dark) {
+    --background: #001b2e;
+    --background-alt: #07314e;
+    --primary: #84cbf3;
+    --primary-contrast: #001b2e;
+    --accent: #ffd9be;
+    --color: #ffffff;
+    --danger: #fdaeae;
+    --shadow: #3e5d70;
+    --border: #8b9398;
+
+  }
+
+  color: var(--color);
+  background: var(--background);
+  font: var(--font);
+}
+
+
+
 /* 
     css from https://www.cssmakeovers.com/patterns/three-columns-long-sidebars/ 
     I"ll made some changes, and will continue to adapt and change more as I go along.
